[package]
name = "quest-server"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
thiserror = "1.0.37"
serde_json = "1.0.85"
log = "0.4.17"
toml = "0.5.9"

[dependencies.log4rs]
version = "1.1.1"
features = ["rolling_file_appender", "gzip"]

[dependencies.chrono]
version = "0.4.22"
features = ["serde"]

[dependencies.uuid]
version = "1.1.2"
features = ["v4", "serde"]

[dependencies.axum]
version = "0.5.16"
features = ["query", "headers"]

[dependencies.sqlx]
version = "0.6.2"
features = ["runtime-tokio-rustls", "postgres", "uuid", "json", "chrono"]

[dependencies.serde]
version = "1.0.145"
features = ["derive"]

[dependencies.tokio]
version = "1.17.0"
features = ["macros", "fs", "rt-multi-thread"]