[package]
name = "quest-server"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.85"
toml = "0.7.8"
tower-http = { version = "0.4.4", features = ["fs"] }
axum = { version = "0.6.20", features = ["query", "headers"] }
teloxide = { version = "0.12.2", features = ["macros", "auto-send"] }
chrono = { version = "0.4.30", features = ["serde"] }
uuid = { version = "1.4.1", features = ["v4", "serde"] }
serde = { version = "1.0.188", features = ["derive"] }
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
mongodb = { version = "2.6.1", features = ["bson-chrono-0_4", "bson-uuid-1"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
anyhow = "1.0.75"
thiserror = "1.0.48"
axum-macros = "0.3.8"
tower-service = "0.3.2"
futures = "0.3.28"
tokio-util = "0.7.8"
